# ISiT

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
cv/: Dockerfile  delete_dup.py  find_obj.py  insert_image.py  lab.py  requirements.txt  searcher.py  searcher_text.py  utils_cv.py
cv/app/: api.py  classification.py  delete_dup.py  find_obj.py  hsv.py  image_merge_pyramid.py  insert_image.py  lab.py  model.py  prediction.py  searcher.py  searcher_text.py  task1.py  utils_cv.py
ml/: main.py
scraper/: all_links.txt  api.py  connect.py  crawler.py  part_links.txt  pyproject.toml  scraper.py
scraper/scraper/: api.py  connect.py  main.py  part_links.txt  scraper.py
