[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Thlz <tikholoz.02@mail.ru>"]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.1"
pydantic = "^2.6.0"
uvicorn = "^0.27.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
