[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Thlz <tikholoz.02@mail.ru>"]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.1"
pydantic = "^2.6.0"
uvicorn = "^0.27.0.post1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
httpx = "^0.27.0"
asyncpg = "^0.29.0"
aiofiles = "^23.2.1"
sqlalchemy = "^2.0.28"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''
   /(
       \.git
     | \.github
     | \.idea
     | __pycache__
     | \.gitignore
     | \.lock
     | \.toml
   )/
'''

[tool.poetry.scripts]
format = "black --line-length=88 --target-version=py310"

